@startuml C2 - Classi del componente Stazione
' =========================================================================
'  DIAGRAMMA DELLE CLASSI C2 - modulo Stazioni (Quarkus, una istanza per stazione)
'
'  Sorgenti: Stazioni/src/main/java/it/uni/reti2/
'    main.java, DBLocale.java, LocalBuffer.java, StationGateway.java,
'    HeartbeatGenerator.java, HeartbeatKA.java, StationIngestion.java,
'    StationDatabaseValidator.java, SecureHttpClient.java
'
'  E' l'unico componente con una interfaccia dichiarata (HeartbeatKA) e
'  l'unico con una coda di persistenza temporanea (LocalBuffer).
' =========================================================================

skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor #E8F0FE
    BorderColor #1A73E8
    FontColor #202124
    ArrowColor #5F6368
}
skinparam class<<stato>> {
    BackgroundColor #E6F4EA
    BorderColor #137333
}
skinparam class<<canale>> {
    BackgroundColor #FCE8E6
    BorderColor #C5221F
}
skinparam interface {
    BackgroundColor #FFF3E0
    BorderColor #E8710A
}
skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #F9A825
}
hide empty members

title C2 - Classi del componente Stazione (nodo di campo)

class main <<QuarkusMain>> {
  - {static} STAZIONE_ID_PARAM : String
  + {static} main(args : String[]) : void
  + run(args : String...) : int
}

class DBLocale <<ApplicationScoped>> <<stato>> {
  + stazioneId : String
  + stato : String
  + stazioneRiconosciuta : boolean
  + connessioneCentrale : boolean
  + treniPresenti : Map<String, Instant>
  + sensoriUltimoBattito : Map<String, Instant>
}

class LocalBuffer <<ApplicationScoped>> <<stato>> {
  - bufferEventi : Deque<EventoBufferizzato>
  + add(canale : String, payload : String) : void
  + addFirst(canale : String, payload : String) : void
  + poll() : EventoBufferizzato
  + isEmpty() : boolean
  + size() : int
  + getBuffer() : List<EventoBufferizzato>
}

class EventoBufferizzato <<record>> {
  + canale : String
  + payload : String
}

interface HeartbeatKA {
  + generatePayload(stazioneId : String, stato : String, bufferSize : int) : String
}

class HeartbeatGenerator <<ApplicationScoped>> <<canale>> {
  + timeoutSensoriSecondi : long
  + generatePayload(...) : String
  ~ manutenzionePeriodica() : void
  + generaHeartbeat() : Multi<String>
  - controllaSensori() : void
}

class StationGateway <<ApplicationScoped>> <<canale>> {
  - mapper : ObjectMapper
  + riceviAlert(message) : CompletionStage<Void>
  + riceviPassaggio(message) : CompletionStage<Void>
  + inviaGuasto(descrizione : String) : void
  + inviaGuasto(descrizione : String, severita : String) : void
  + inviaTransito(trenoId : String, tipo : String) : void
  - inviaOppureBufferizza(canale : String, payload : String, emitter) : void
  + flush() : void
}

class StationDatabaseValidator <<ApplicationScoped>> <<canale>> {
  - ultimoTentativo : Instant
  - esitoCorrente : volatile EsitoVerifica
  + verificaSeNecessario() : EsitoVerifica
  - inviaRichiestaValidazione(idStazione : String) : void
  + gestisciRispostaValidazione(messaggio) : CompletionStage<Void>
}

enum EsitoVerifica {
  VALIDATO
  ID_NON_PRESENTE
  RIPROVA
}

class StationIngestion <<@Path("/stazione")>> {
  + info() : Response
  + getStato() : Response
  + getBuffer() : Response
  + rilevaTransitoTreno(dati : Map) : Response
  + rilevaGuasto(dati : Map) : Response
  + heartbeatSensore(dati : Map) : Response
  + reteOffline() : Response
  + reteOnline() : Response
  + getTreniPresenti() : Response
}

class SecureHttpClient <<ApplicationScoped>> {
  + get() : HttpClient
}

HeartbeatGenerator ..|> HeartbeatKA
LocalBuffer +-- EventoBufferizzato
StationDatabaseValidator +-- EsitoVerifica

main --> DBLocale : imposta stazioneId
main --> StationDatabaseValidator : ciclo di verifica all'avvio

HeartbeatGenerator --> DBLocale
HeartbeatGenerator --> LocalBuffer : legge la dimensione\ne fa scattare il flush
HeartbeatGenerator --> StationGateway : flush() e inviaGuasto()\nper i sensori silenti

StationGateway --> DBLocale
StationGateway --> LocalBuffer : accoda e svuota
StationIngestion --> DBLocale
StationIngestion --> LocalBuffer : ispezione diagnostica
StationIngestion --> StationGateway
StationDatabaseValidator --> DBLocale : stazioneRiconosciuta

note right of LocalBuffer
  Deque e non Queue: serve poter rimettere un evento IN TESTA
  quando il reinvio fallisce a meta' flush, se no la Centrale
  riceverebbe una USCITA prima della relativa ENTRATA.
  Tutti i metodi sono synchronized perche' la coda la toccano
  il job da 10 secondi, il thread MQTT e le richieste REST.
end note

note bottom of HeartbeatGenerator
  I due compiti sono volutamente separati: il battito e' un Multi
  reattivo, il controllo dei sensori e lo store-and-forward sono un
  @Scheduled. Stavano insieme dentro l'invoke del Multi, e siccome
  un Multi che fallisce termina, al primo errore MQTT si fermava
  anche lo svuotamento del buffer.
end note

note bottom of DBLocale
  Anche qui e' RAM, non un database: sopravvive alla caduta del
  collegamento ma non a quella del processo. Un SQLite locale
  sarebbe il passo successivo, ed e' scritto fra i limiti noti.
end note

@enduml
